# mdbook-include-check

./: Cargo.toml  README.md
src/: lib.rs  main.rs
