[package]
name = "mdbook-include-check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
clap = "3.2.22"
mdbook = "0.4.21"
regex = "1.6.0"
semver = "1.0.14"
serde = "1.0.144"
serde_json = "1.0.85"
